update reservation list style fix overflow on x on mobile device

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -6,10 +6,7 @@
     padding: 0;
     margin: 0;
 }
-table{
-    display: block;
-    overflow-x: scroll;
-}
+
 footer{
     background-color: var(--primary-color);
 }
@@ -50,6 +47,12 @@ footer{
 .not-found-page{
     width: 400px;
     height: 400px;
+}
+@media screen and (max-width:435px) {
+    table{
+        display: block;
+        overflow-x: scroll;
+    }
 }
 @media screen and (min-width:968px){
     .card-body{
